[package]
name = "archeon"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", default-features = false, features = [ "client", "http1", "tcp" ] }
hyper-tls = "0.5.0"
indicatif = { version = "0.17.4", default-features = false, features = [] }
tokio = { version = "1.28.2", default-features = false, features = [ "fs", "io-util", "process" ] }

[dev-dependencies]
mockito = { version = "1.0.2", default-features = false, features = [] }
tokio = { version = "1.28.2", default-features = false, features = [ "rt-multi-thread", "macros", "test-util" ] }
